--- a/Project_1/Final Deliverables/code/registration_form.html
+++ b/Project_1/Final Deliverables/code/registration_form.html
@@ -126,7 +126,7 @@
       </div>
       <div class="buttons">
         <input type="submit" name="submit" value="Submit" onclick="register()"/>
-        <input type="button" value="Back" onclick = "index.html" />
+         <a href="index.html"><input type="button" value="Back"/></a>
         <input type="reset" value="Reset" />
       </div>
     </form>
